--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-PyQt5>=5.15.11
-pyqtgraph>=0.13.7
-pandas>=2.2.3
-numpy>=2.1.2
+PyQt5>=5.15.10
+PyQt5-Qt5>=5.15.2
+PyQt5-sip>=12.13.0
+pyqtgraph>=0.13.3
+pandas>=2.1.4
+numpy>=1.26.2
+Pillow>=10.1.0
+matplotlib>=3.8.2
 requests>=2.32.3
-python-dateutil>=2.9.0
+python-dateutil>=2.8.2
+pytz>=2023.3.post1
