move test and debug file into a folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
-config.py
-brainstorm.txt
-Brainstorm.txt
-.venv/
 __pycache__/
+.venv/
 .vscode/
-find_states.py
-hot_reload.py
-jira_issues_for_states.json
-all_jobs_details.py
-all_jobs_details.json
-installer.txt
 output/
-all_jobs_list.py
-all_jobs_list.csv
+test_and_debug/
+config.py
+hot_reload.py
+installer.txt
 note.txt
